--- a/assets/css/scss/sections/_news.scss
+++ b/assets/css/scss/sections/_news.scss
@@ -27,15 +27,7 @@
   background-image: url(../img/latest-news/news-bg-6.jpg);
 }
 
-.latest-news-bg {
-  height: 200px;
-  background-size: cover;
-  background-position: center;
-  border-radius: 10px;
-  background-color: #ddd;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
+
 
 .single-latest-news h3 {
   font-size: 20px;
@@ -84,7 +76,7 @@ p {
 }
 
 .single-artcile-bg {
-  background-image: url(../img/latest-news/news-bg-3.jpg);
+  background-image: url(../img/latest-news/.news-bg-1.jpg);
   height: 450px;
 }
 
