--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -111,6 +111,7 @@
 	.site-logo {
 	    text-align: center;
 	    position: absolute;
+		left: -100px;
 	    z-index: 999;
 	}
 	.mean-container .mean-bar {
@@ -428,6 +429,7 @@
 	}
 	.site-logo {
     position: absolute;
+		left: -120px;
 	    z-index: 99;
 	}
 
@@ -575,5 +577,14 @@
 	    margin-left: 0;
 	    margin-top: 15px;
 	    display: block;
+	}
+}
+@media (max-width:650px){
+	.site-logo {
+	    text-align: center;
+	    position: absolute;
+		top: -60px;
+		left: -50px;
+	    z-index: 999;
 	}
 }
